--- a/index.html
+++ b/index.html
@@ -6,24 +6,16 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body class="is-preload">
-
+		<img class="page-cover-image" src="assets/images/background.png">
+		
 		<!-- Wrapper -->
 			<div id="wrapper">
 			
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</header>
-
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
