--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		
 		<!-- Wrapper -->
 			<div id="wrapper">
-			
+
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">About</a></li>
+							<li><a href="#first">Skill</a></li>
+							<li><a href="#second">Project</a></li>
+							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
 
