EDIT index.html 내용 변경 style.css 정리

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body class="is-preload">
-		<img class="page-cover-image" src="assets/images/background.png">
+		<img class="background" src="assets/images/background.png">
 		
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -19,10 +19,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">About</a></li>
-							<li><a href="#first">Skill</a></li>
-							<li><a href="#second">Project</a></li>
-							<li><a href="#cta">Contact</a></li>
+							<li><a href="#about" class="active">About</a></li>
+							<li><a href="#skill">Skill</a></li>
+							<li><a href="#project">Project</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -30,11 +30,11 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main">
+							<section id="about" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>About me</h2>
 										</header>
 										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
@@ -43,12 +43,14 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<div class="avatar">
+										<div class="image avatar_img" style="background-image: assets/images/profile.jpg;"></div>
+									</div>
 								</div>
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="skill" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
 								</header>
@@ -77,7 +79,7 @@
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="project" class="main special">
 								<header class="major">
 									<h2>Ipsum consequat</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -114,7 +116,7 @@
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="contact" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
