--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="wrap">
 		<div><img class="background" src="assets/images/background.png"></img></div>>
 		<div class="text">
-			<p>KANGYOxzO LEE</p>
+			<h1>KANGYOO LEE</h1>
 		</div>
 	</div>
 
