--- a/index.html
+++ b/index.html
@@ -148,8 +148,11 @@
 
 		</div>
 
+		<footer class = 'aaa'>
+
+		</footer>
 		<!-- Footer -->
-		<footer id="footer">
+		<!-- <footer id="footer">
 			<section>
 				<h2>Aliquam sed mauris</h2>
 				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam
@@ -178,7 +181,7 @@
 				</ul>
 			</section>
 			<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-		</footer>
+		</footer> -->
 
 	</div>
 
