EDIT 사진 추가 및 About me 내용 작성

--- a/index.html
+++ b/index.html
@@ -43,16 +43,14 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-							adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-							Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn More</a></li>
-						</ul>
+						<p>안녕하세요 :) 세상을 바꾸고 싶은 학생개발자, 이강유입니다!</p>
+						<p>파이썬과 DB를 주로 이용하고 자바스크립트를 배우고 있습니다!</p><br>
+						<p>최근에는 디스코드 봇 개발에 관심이 많고,</p>
+						<p>깃허브 1일 1커밋을 실천하기 위해 노력하고 있습니다.</p>
 					</div>
-					<div class="avatar">
-						<div class="image avatar_img" style="background-image: assets/images/profile.jpg;"></div>
-					</div>
+					<span class = "image">
+						<img src="assets/images/profile.jpg" alt="">
+					</span>
 				</div>
 			</section>
 
