--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 
 <body class="is-preload" style="margin:0;padding:0">
@@ -48,7 +49,7 @@
 						<p>최근에는 디스코드 봇 개발에 관심이 많고,</p>
 						<p>깃허브 1일 1커밋을 실천하기 위해 노력하고 있습니다.</p>
 					</div>
-					<span class = "image">
+					<span class="image">
 						<img src="assets/images/profile.jpg" alt="">
 					</span>
 				</div>
@@ -57,33 +58,26 @@
 			<!-- First Section -->
 			<section id="skill" class="main special">
 				<header class="major">
-					<h2>Magna veroeros</h2>
+					<h2>Skill</h2>
 				</header>
 				<ul class="features">
 					<li>
-						<span class="icon solid major style1 fa-code"></span>
-						<h3>Ipsum consequat</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<i class="fab fa-python fa-5x"></i>
+						<h3 class='skill-name'>Python</h3>
 					</li>
 					<li>
-						<span class="icon major style3 fa-copy"></span>
-						<h3>Amed sed feugiat</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<i class="fab fa-html5 fa-5x"></i>
+						<h3 class='skill-name'>Html / Css</h3>
 					</li>
 					<li>
-						<span class="icon major style5 fa-gem"></span>
-						<h3>Dolor nullam</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<i class="fab fa-js-square fa-5x"></i>
+						<h3 class='skill-name'>JavaScript</h3>
+					</li>
+					<li>
+						<i class="fab fa-js-square fa-5x"></i>
+						<h3 class='skill-name'>JavaScript</h3>
 					</li>
 				</ul>
-				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
-				</footer>
 			</section>
 
 			<!-- Second Section -->
@@ -146,7 +140,7 @@
 
 		</div>
 
-		<footer class = 'aaa'>
+		<footer class='aaa'>
 
 		</footer>
 		<!-- Footer -->
