--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
 						<h3 class='skill-name'>JavaScript</h3>
 					</li>
 					<li>
-						<i class="fab fa-js-square fa-5x"></i>
-						<h3 class='skill-name'>JavaScript</h3>
+						<i class="fas fa-database fa-5x"></i>
+						<h3 class='skill-name'>Database</h3>
+					</li>
+					<li>
+						<i class="fas fa-server fa-5x"></i>
+						<h3 class='skill-name'>Server</h3>
 					</li>
 				</ul>
 			</section>
