EDIT index.html 스킬 대략 완성..

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<div class="wrap">
 		<div><img class="background" src="assets/images/background.png"></img></div>>
 		<div class="text">
-			<h1>KANGYOO LEE</h1>
+			<h1 class = "name">KANGYOO LEE</h1>
+			<h4 class = "name2">Copyright 2021. kangyoolee. All rights reserved</h4>
 		</div>
 	</div>
 
@@ -62,24 +63,29 @@
 				</header>
 				<ul class="features">
 					<li>
-						<i class="fab fa-python fa-5x"></i>
+						<i class="fab fa-python fa-5x" style="color: #3776AB;"></i>
 						<h3 class='skill-name'>Python</h3>
+						<h4>discord.py</h4>
 					</li>
 					<li>
-						<i class="fab fa-html5 fa-5x"></i>
+						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
 						<h3 class='skill-name'>Html / Css</h3>
 					</li>
 					<li>
-						<i class="fab fa-js-square fa-5x"></i>
+						<i class="fab fa-js-square fa-5x" style="color: #F7DF1E;"></i>
 						<h3 class='skill-name'>JavaScript</h3>
 					</li>
 					<li>
-						<i class="fas fa-database fa-5x"></i>
+						<i class="fas fa-database fa-5x" style="color: #003B57;"></i>
 						<h3 class='skill-name'>Database</h3>
 					</li>
 					<li>
-						<i class="fas fa-server fa-5x"></i>
+						<i class="fas fa-server fa-5x" style="color: #A22846;"></i>
 						<h3 class='skill-name'>Server</h3>
+					</li>
+					<li>
+						<i class="fab fa-git-square fa-5x" style="color: #F05032;"></i>
+						<h3 class='skill-name'>Git</h3>
 					</li>
 				</ul>
 			</section>
