EDIT index.html 콘택트 완성

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<div class="wrap">
 		<div><img class="background" src="assets/images/background.png"></img></div>>
 		<div class="text">
-			<h1 class = "name">KANGYOO LEE</h1>
-			<h4 class = "name2">Copyright 2021. kangyoolee. All rights reserved</h4>
+			<h1 class="name">KANGYOO LEE</h1>
+			Copyrightⓒ2021 by kangyoolee</h4>
 		</div>
 	</div>
 
@@ -65,7 +65,6 @@
 					<li>
 						<i class="fab fa-python fa-5x" style="color: #3776AB;"></i>
 						<h3 class='skill-name'>Python</h3>
-						<h4>discord.py</h4>
 					</li>
 					<li>
 						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
@@ -85,7 +84,7 @@
 					</li>
 					<li>
 						<i class="fab fa-git-square fa-5x" style="color: #F05032;"></i>
-						<h3 class='skill-name'>Git</h3>
+						<h3 class='skill-name'>Git / Github</h3>
 					</li>
 				</ul>
 			</section>
@@ -93,58 +92,63 @@
 			<!-- Second Section -->
 			<section id="project" class="main special">
 				<header class="major">
-					<h2>Ipsum consequat</h2>
-					<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-						posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+					<h2>Project</h2>
 				</header>
-				<ul class="statistics">
-					<li class="style1">
-						<span class="icon solid fa-code-branch"></span>
-						<strong>5,120</strong> Etiam
+				<ul class="features">
+					<li>
+						<i class="fab fa-python fa-5x" style="color: #3776AB;"></i>
+						<h3 class='skill-name'>Python</h3>
 					</li>
-					<li class="style2">
-						<span class="icon fa-folder-open"></span>
-						<strong>8,192</strong> Magna
+					<li>
+						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
+						<h3 class='skill-name'>Html / Css</h3>
 					</li>
-					<li class="style3">
-						<span class="icon solid fa-signal"></span>
-						<strong>2,048</strong> Tempus
+					<li>
+						<i class="fab fa-js-square fa-5x" style="color: #F7DF1E;"></i>
+						<h3 class='skill-name'>JavaScript</h3>
 					</li>
-					<li class="style4">
-						<span class="icon solid fa-laptop"></span>
-						<strong>4,096</strong> Aliquam
+					<li>
+						<i class="fas fa-database fa-5x" style="color: #003B57;"></i>
+						<h3 class='skill-name'>Database</h3>
 					</li>
-					<li class="style5">
-						<span class="icon fa-gem"></span>
-						<strong>1,024</strong> Nullam
+					<li>
+						<i class="fas fa-server fa-5x" style="color: #A22846;"></i>
+						<h3 class='skill-name'>Server</h3>
+					</li>
+					<li>
+						<i class="fab fa-git-square fa-5x" style="color: #F05032;"></i>
+						<h3 class='skill-name'>Git / Github</h3>
 					</li>
 				</ul>
-				<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus
-					hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus.
-					Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed
-					eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur
-					vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis
-					porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam
-					porta. Cras eu ornare dui curabitur lacinia.</p>
-				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
-				</footer>
 			</section>
 
 			<!-- Get Started -->
 			<section id="contact" class="main special">
 				<header class="major">
-					<h2>Congue imperdiet</h2>
-					<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-						posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+					<h2>Contact</h2>
 				</header>
+				<p>Email : <a href="mailto:me@kangyoo.kr?Subject=눈치보지말고보내세요! 전 괜찮아요!" target="_top">me@kangyoo.kr</a> (
+					편하게 생각하세요! )</p>
 				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button primary">Get Started</a></li>
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
+					<div id="disqus_thread"></div>
+					<script>
+						/**
+						 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+						 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+						/*
+						var disqus_config = function () {
+						this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+						this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+						};
+						*/
+						(function () { // DON'T EDIT BELOW THIS LINE
+							var d = document,
+								s = d.createElement('script');
+							s.src = 'https://kangyoo-kr.disqus.com/embed.js';
+							s.setAttribute('data-timestamp', +new Date());
+							(d.head || d.body).appendChild(s);
+						})();
+					</script>
 				</footer>
 			</section>
 
