--- a/index.html
+++ b/index.html
@@ -94,32 +94,12 @@
 				<header class="major">
 					<h2>Project</h2>
 				</header>
-				<ul class="features">
-					<li>
-						<i class="fab fa-python fa-5x" style="color: #3776AB;"></i>
-						<h3 class='skill-name'>Python</h3>
-					</li>
-					<li>
-						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
-						<h3 class='skill-name'>Html / Css</h3>
-					</li>
-					<li>
-						<i class="fab fa-js-square fa-5x" style="color: #F7DF1E;"></i>
-						<h3 class='skill-name'>JavaScript</h3>
-					</li>
-					<li>
-						<i class="fas fa-database fa-5x" style="color: #003B57;"></i>
-						<h3 class='skill-name'>Database</h3>
-					</li>
-					<li>
-						<i class="fas fa-server fa-5x" style="color: #A22846;"></i>
-						<h3 class='skill-name'>Server</h3>
-					</li>
-					<li>
-						<i class="fab fa-git-square fa-5x" style="color: #F05032;"></i>
-						<h3 class='skill-name'>Git / Github</h3>
-					</li>
-				</ul>
+
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="https://github.com/kangyoolee" class="button">깃허브에서 더보기!</a></li>
+					</ul>
+				</footer>
 			</section>
 
 			<!-- Get Started -->
