--- a/index.html
+++ b/index.html
@@ -65,6 +65,46 @@
 					<li>
 						<i class="fab fa-python fa-5x" style="color: #3776AB;"></i>
 						<h3 class='skill-name'>Python</h3>
+						<h4 class = "skill-detail">Discord.py</h4>
+						<h4 class="skill-detail">Tensorflow / Pandas</h4>
+					</li>
+					<li>
+						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
+						<h3 class='skill-name'>Html / Css</h3>
+					</li>
+					<li>
+						<i class="fab fa-js-square fa-5x" style="color: #F7DF1E;"></i>
+						<h3 class='skill-name'>JavaScript</h3>
+					</li>
+					<li>
+						<i class="fas fa-database fa-5x" style="color: #003B57;"></i>
+						<h3 class='skill-name'>Database</h3>
+						<h4 class="skill-detail">MySQL</h4>
+					</li>
+					<li>
+						<i class="fas fa-server fa-5x" style="color: #A22846;"></i>
+						<h3 class='skill-name'>Server</h3>
+						<h4 class="skill-detail">Raspberry-Pi</h4>
+					</li>
+					<li>
+						<i class="fab fa-git-square fa-5x" style="color: #F05032;"></i>
+						<h3 class='skill-name'>Git / Github</h3>
+					</li>
+				</ul>
+			</section>
+
+			<!-- Second Section -->
+			<section id="project" class="main special">
+				<header class="major">
+					<h2>Project</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<div class="Box">
+							<i class="ap fab fa-python fa-3x" style="color: #3776AB;"></i>
+							<h3 class="skill-name">hcskr-timer</h3>
+							<h4 class="skill-detail-a">정해진 시간에 교육부 자가진단을 수행하는 타이머</h4>
+						</div>
 					</li>
 					<li>
 						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
@@ -83,18 +123,11 @@
 						<h3 class='skill-name'>Server</h3>
 					</li>
 					<li>
-						<i class="fab fa-git-square fa-5x" style="color: #F05032;"></i>
-						<h3 class='skill-name'>Git / Github</h3>
+						<div class="project-flex">
+
+						</div>
 					</li>
 				</ul>
-			</section>
-
-			<!-- Second Section -->
-			<section id="project" class="main special">
-				<header class="major">
-					<h2>Project</h2>
-				</header>
-
 				<footer class="major">
 					<ul class="actions special">
 						<li><a href="https://github.com/kangyoolee" class="button">깃허브에서 더보기!</a></li>
