--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!Doctype html>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -101,30 +96,10 @@
 				<ul class="features">
 					<li>
 						<div class="Box">
-							<i class="ap fab fa-python fa-3x" style="color: #3776AB;"></i>
+							<i class="ap fab fa-python fa-4x" style="color: #3776AB;"></i>
 							<h3 class="skill-name">hcskr-timer</h3>
 							<h4 class="skill-detail-a">정해진 시간에 교육부 자가진단을 수행하는 타이머</h4>
-						</div>
-					</li>
-					<li>
-						<i class="fab fa-html5 fa-5x" style="color: #E34F26;"></i>
-						<h3 class='skill-name'>Html / Css</h3>
-					</li>
-					<li>
-						<i class="fab fa-js-square fa-5x" style="color: #F7DF1E;"></i>
-						<h3 class='skill-name'>JavaScript</h3>
-					</li>
-					<li>
-						<i class="fas fa-database fa-5x" style="color: #003B57;"></i>
-						<h3 class='skill-name'>Database</h3>
-					</li>
-					<li>
-						<i class="fas fa-server fa-5x" style="color: #A22846;"></i>
-						<h3 class='skill-name'>Server</h3>
-					</li>
-					<li>
-						<div class="project-flex">
-
+							<a href="https://github.com/kangyoolee/hcskr_timer"><i class="fab fa-github-square fa-2x" style="margin-bottom: 10px;"></i></a>
 						</div>
 					</li>
 				</ul>
