대규모 정리 전

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div><img class="background" src="assets/images/background.png"></img></div>>
 		<div class="text">
 			<h1 class="name">KANGYOO LEE</h1>
-			Copyrightⓒ2021 by kangyoolee</h4>
+			<h4 class="copyright">Copyrightⓒ2021 by kangyoolee</h4>
 		</div>
 	</div>
 
@@ -60,7 +60,7 @@
 					<li>
 						<i class="fab fa-python fa-5x" style="color: #3776AB;"></i>
 						<h3 class='skill-name'>Python</h3>
-						<h4 class = "skill-detail">Discord.py</h4>
+						<h4 class="skill-detail">Discord.py</h4>
 						<h4 class="skill-detail">Tensorflow / Pandas</h4>
 					</li>
 					<li>
@@ -95,11 +95,12 @@
 				</header>
 				<ul class="features">
 					<li>
-						<div class="Box">
-							<i class="ap fab fa-python fa-4x" style="color: #3776AB;"></i>
-							<h3 class="skill-name">hcskr-timer</h3>
-							<h4 class="skill-detail-a">정해진 시간에 교육부 자가진단을 수행하는 타이머</h4>
-							<a href="https://github.com/kangyoolee/hcskr_timer"><i class="fab fa-github-square fa-2x" style="margin-bottom: 10px;"></i></a>
+						<div class="card">
+							<i class="fab fa-python fa-4x" style="color: #3776AB; margin-top: 20px;"></i>
+							<h3 class="project-name">hcskr-timer</h3>
+							<h4 class="project-detail">정해진 시간에 교육부 자가진단을 수행하는 타이머</h4>
+							<a href="https://github.com/kangyoolee/hcskr_timer"><i class="fab fa-github-square fa-2x"
+									style="margin-bottom: 20px; margin-top: 9px;"></i></a>
 						</div>
 					</li>
 				</ul>
